force-app/main/default/objects/Territorio_Administrativo__c/fields/Total_Occupation_Type_Retired__c.field-meta.xml
<CustomField>
    <fullName>Total_Occupation_Type_Retired__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Occupation Type Retired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>