force-app/main/default/objects/Territorio_Administrativo__c/fields/Total_Otros_de_0_a_15__c.field-meta.xml
<CustomField>
    <fullName>Total_Otros_de_0_a_15__c</fullName>
    <label>Total Otros de 0 a 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>