force-app/main/default/objects/Territorio_Administrativo__c/fields/Total_Otros_de_65plus__c.field-meta.xml
<CustomField>
    <fullName>Total_Otros_de_65plus__c</fullName>
    <label>Total Otros de +65</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>