force-app/main/default/objects/Territorio_Administrativo__c/fields/Total_Telefonos_FIjos__c.field-meta.xml
<CustomField>
    <fullName>Total_Telefonos_FIjos__c</fullName>
    <label>Landlines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>