force-app/main/default/objects/Territorio_Administrativo__c/fields/Total_Twitter__c.field-meta.xml
<CustomField>
    <fullName>Total_Twitter__c</fullName>
    <label>Twitter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>