force-app/main/default/objects/Territorio_Administrativo__c/recordTypes/Chile.recordType-meta.xml
<RecordType>
    <fullName>Chile</fullName>
    <active>true</active>
    <description>Territorios Chilenos</description>
    <label>Chile</label>
</RecordType>