force-app/main/default/objects/Territorio_Administrativo__c/recordTypes/Otro.recordType-meta.xml
<RecordType>
    <fullName>Otro</fullName>
    <active>true</active>
    <label>Otro</label>
</RecordType>