force-app/main/default/objects/Territorio_Administrativo__c/recordTypes/Territorio_Administrativo.recordType-meta.xml
<RecordType>
    <fullName>Territorio_Administrativo</fullName>
    <active>true</active>
    <label>Territorio Administrativo</label>
</RecordType>