force-app/main/default/objects/Territorio_Administrativo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Level0Name__c</columns>
    <columns>Level1Name__c</columns>
    <columns>Level2Name__c</columns>
    <columns>Level3Name__c</columns>
    <columns>Level4Name__c</columns>
    <columns>Location_UUID__c</columns>
    <columns>Nivel_Administrativo__c</columns>
    <columns>ParentId__c</columns>
    <columns>ParentId_UUID__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>