force-app/main/default/objects/Territorio_Administrativo__c/listViews/Argentina.listView-meta.xml
<ListView>
    <fullName>Argentina</fullName>
    <columns>NAME</columns>
    <columns>Level0Name__c</columns>
    <columns>Level1Name__c</columns>
    <columns>Level2Name__c</columns>
    <columns>Level3Name__c</columns>
    <columns>Level4Name__c</columns>
    <columns>Nivel_Administrativo__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Total_Ciudadanos__c</columns>
    <columns>Location_UUID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location_UUID__c</field>
        <operation>startsWith</operation>
        <value>ARG</value>
    </filters>
    <label>Argentina</label>
</ListView>