force-app/main/default/objects/Territorio_Administrativo__c/listViews/Chile.listView-meta.xml
<ListView>
    <fullName>Chile</fullName>
    <columns>NAME</columns>
    <columns>Nivel_Administrativo__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Level0Name__c</columns>
    <columns>Level1Name__c</columns>
    <columns>Level2Name__c</columns>
    <columns>Level3Name__c</columns>
    <columns>Level4Name__c</columns>
    <columns>Location_UUID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level0Name__c</field>
        <operation>equals</operation>
        <value>Chile</value>
    </filters>
    <label>Chile</label>
</ListView>